--- a/test/fixtures/projects.yml
+++ b/test/fixtures/projects.yml
@@ -1,9 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  request_id: 1
+  title: MyString
+  description: MyText
+  start_date: 2015-03-05
+  end_date: 2015-03-05
   user_id: 1
 
 two:
-  request_id: 1
+  title: MyString
+  description: MyText
+  start_date: 2015-03-05
+  end_date: 2015-03-05
   user_id: 1
