add login page using sessions, display different links if logged in, enable sessions and logging in via sessions controller/helper, modify user model to generate user digest for testing purposes

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -23,3 +23,8 @@ two:
   manager: MyString
   years_with_company: 1
   password_digest: MyString
+
+michael:
+  name: Michael Example
+  email: michael@example.com
+  password_digest: <%= User.digest('password') %>
